test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/subscript_non_ptr.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[18]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(3)
  ;
  return
  identifier(a)
  [
  const int(4)
  ]
  ;
  }
